fix(course): clean up Course entity and improve message properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,23 +1,26 @@
-# Thông ?i?p v? Khóa h?c
-course.not_found=Không tìm th?y khóa h?c
-course.not_published=Khóa h?c ch?a ???c xu?t b?n
-course.access_denied=Không có quy?n truy c?p khóa h?c
-course.permission.modify_denied=Không có quy?n ch?nh s?a khóa h?c
-course.permission.delete_denied=Không có quy?n xóa khóa h?c
-course.no_instructors=Khóa h?c ph?i có ít nh?t m?t gi?ng viên
-course.status.required=Tr?ng thái khóa h?c là b?t bu?c
-course.delete.success=?ã xóa khóa h?c thành công
-course.already_exists=Khóa h?c v?i slug này ?ã t?n t?i
-course.has_active_enrollments=Không th? xóa khóa h?c vì ?ang có ??ng ký h?c ho?t ??ng
-# Thông ?i?p v? Danh m?c
-category.not_found=Không tìm th?y danh m?c
-# Thông ?i?p v? Gi?ng viên
-instructor.not_found=Không tìm th?y gi?ng viên
-user.not_instructor=Ng??i dùng không ph?i là gi?ng viên
-# Thông ?i?p Chung
-validation.required=Tr??ng này là b?t bu?c
-validation.invalid=Giá tr? không h?p l?
-access.denied=T? ch?i truy c?p
-resource.not_found=Không tìm th?y tài nguyên
-operation.failed=Thao tác th?t b?i
-unauthorized.access=Truy c?p không ???c ?y quy?n
+# Course Messages
+course.not_found=Course not found
+course.not_published=Course has not been published
+course.access_denied=No permission to access the course
+course.permission.modify_denied=No permission to modify the course
+course.permission.delete_denied=No permission to delete the course
+course.no_instructors=The course must have at least one instructor
+course.status.required=Course status is required
+course.delete.success=Course deleted successfully
+course.already_exists=A course with this slug already exists
+course.has_active_enrollments=Cannot delete the course because it has active enrollments
+
+# Category Messages
+category.not_found=Category not found
+
+# Instructor Messages
+instructor.not_found=Instructor not found
+user.not_instructor=User is not an instructor
+
+# Common Messages
+validation.required=This field is required
+validation.invalid=Invalid value
+access.denied=Access denied
+resource.not_found=Resource not found
+operation.failed=Operation failed
+unauthorized.access=Unauthorized access
