--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -1,26 +1,26 @@
-# Course Messages
-course.not_found=Không tìm thấy khóa học
-course.not_published=Khóa học chưa được công bố
-course.access_denied=Không có quyền truy cập khóa học
-course.permission.modify_denied=Không có quyền chỉnh sửa khóa học
-course.permission.delete_denied=Không có quyền xóa khóa học
-course.no_instructors=Khóa học phải có ít nhất một giảng viên
-course.status.required=Trạng thái khóa học là bắt buộc
-course.delete.success=Xóa khóa học thành công
-course.already_exists=Đã tồn tại khóa học với slug này
-course.has_active_enrollments=Không thể xóa khóa học có học viên đang tham gia
+# Th\u00F4ng \u0111i\u1EC7p v\u1EC1 Kh\u00F3a h\u1ECDc
+course.not_found=Kh\u00F4ng t\u00ECm th\u1EA5y kh\u00F3a h\u1ECDc
+course.not_published=Kh\u00F3a h\u1ECDc ch\u01B0a \u0111\u01B0\u1EE3c xu\u1EA5t b\u1EA3n
+course.access_denied=B\u1EA1n kh\u00F4ng c\u00F3 quy\u1EC1n truy c\u1EADp kh\u00F3a h\u1ECDc n\u00E0y
+course.permission.modify_denied=B\u1EA1n kh\u00F4ng c\u00F3 quy\u1EC1n ch\u1EC9nh s\u1EEDa kh\u00F3a h\u1ECDc n\u00E0y
+course.permission.delete_denied=B\u1EA1n kh\u00F4ng c\u00F3 quy\u1EC1n x\u00F3a kh\u00F3a h\u1ECDc n\u00E0y
+course.no_instructors=Kh\u00F3a h\u1ECDc ph\u1EA3i c\u00F3 \u00EDt nh\u1EA5t m\u1ED9t gi\u1EA3ng vi\u00EAn
+course.status.required=Tr\u1EA1ng th\u00E1i kh\u00F3a h\u1ECDc l\u00E0 b\u1EAFt bu\u1ED9c
+course.delete.success=\u0110\u00E3 x\u00F3a kh\u00F3a h\u1ECDc th\u00E0nh c\u00F4ng
+course.already_exists=Kh\u00F3a h\u1ECDc v\u1EDBi slug n\u00E0y \u0111\u00E3 t\u1ED3n t\u1EA1i
+course.has_active_enrollments=Kh\u00F4ng th\u1EC3 x\u00F3a kh\u00F3a h\u1ECDc v\u00EC \u0111ang c\u00F3 \u0111\u0103ng k\u00FD h\u1ECDc c\u00F2n ho\u1EA1t \u0111\u1ED9ng
 
-# Category Messages
-category.not_found=Không tìm thấy danh mục
+# Th\u00F4ng \u0111i\u1EC7p v\u1EC1 Danh m\u1EE5c
+category.not_found=Kh\u00F4ng t\u00ECm th\u1EA5y danh m\u1EE5c
 
-# Instructor Messages
-instructor.not_found=Không tìm thấy giảng viên
-user.not_instructor=Người dùng không phải là giảng viên
+# Th\u00F4ng \u0111i\u1EC7p v\u1EC1 Gi\u1EA3ng vi\u00EAn
+instructor.not_found=Kh\u00F4ng t\u00ECm th\u1EA5y gi\u1EA3ng vi\u00EAn
+user.not_instructor=Ng\u01B0\u1EDDi d\u00F9ng n\u00E0y kh\u00F4ng ph\u1EA3i l\u00E0 gi\u1EA3ng vi\u00EAn
 
-# General Messages
-validation.required=Trường này là bắt buộc
-validation.invalid=Giá trị không hợp lệ
-access.denied=Truy cập bị từ chối
-resource.not_found=Không tìm thấy tài nguyên
-operation.failed=Thao tác thất bại
-unauthorized.access=Truy cập không được phép
+# Th\u00F4ng \u0111i\u1EC7p Chung
+validation.required=Tr\u01B0\u1EDDng n\u00E0y l\u00E0 b\u1EAFt bu\u1ED9c
+validation.invalid=Gi\u00E1 tr\u1ECB kh\u00F4ng h\u1EE3p l\u1EC7
+access.denied=T\u1EEB ch\u1ED1i truy c\u1EADp
+resource.not_found=Kh\u00F4ng t\u00ECm th\u1EA5y t\u00E0i nguy\u00EAn
+operation.failed=Thao t\u00E1c th\u1EA5t b\u1EA1i
+unauthorized.access=Truy c\u1EADp kh\u00F4ng \u0111\u01B0\u1EE3c \u1EE7y quy\u1EC1n
